# maroczy

./: .env.example  .gitignore  README.md  characteristics mapping.csv  pyproject.toml
notebooks/: lse_market_intelligence.ipynb  momentum_crash_analysis.ipynb  options_risk_neutral_surfaces.ipynb  quickstart.ipynb
src/maroczy/: __init__.py  config.py
src/maroczy/broker/: __init__.py  connection.py  data.py  orders.py
src/maroczy/characteristics/: __init__.py  engine.py  registry.py
src/maroczy/characteristics/functions/: __init__.py  alternative.py  composite.py  crspd.py  crspm.py  funda.py  fundamentals_annual.py  fundamentals_quarterly.py  fundq.py  macro_derived.py  merge.py  options_derived.py  price_daily.py  price_monthly.py
src/maroczy/datafeed/: __init__.py  lse.py  router.py
src/maroczy/features/: __init__.py  bubble.py  covariance.py  cpcv.py  macro.py  options.py  positioning.py  rough_vol.py
src/maroczy/strategy/: __init__.py  backtest.py  signals.py
tests/: test_bubble.py  test_characteristics.py  test_config.py  test_covariance.py  test_cpcv.py  test_datafeed.py  test_rough_vol.py  test_strategy.py
