[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maroczy"
version = "0.1.0"
description = "Quant research toolkit: IBKR integration, alpha features (bubble detection, covariance cleaning, CPCV, rough volatility), and characteristic generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ib_insync>=0.9.86",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "duckdb>=1.0",
]

[project.optional-dependencies]
notebook = ["jupyter", "matplotlib", "ipywidgets"]
fast = ["numba>=0.59"]
lse = ["lse-data[frames]>=0.14"]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
maroczy = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
